--- a/webscraping.ipynb
+++ b/webscraping.ipynb
@@ -13,8 +13,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "###############################˜#################################\n",
     "########################## WEBSCRAPING #########################\n",
@@ -14426,7 +14428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14435,7 +14437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -14654,7 +14656,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14663,6 +14665,286 @@
     "df = pd.DataFrame(data_acoes)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Papel', 'Cotação', 'Tipo', 'Data últ cot', 'Empresa', 'Min 52 sem',\n",
+       "       'Setor', 'Max 52 sem', 'Subsetor', 'Vol $ méd (2m)', 'Valor de mercado',\n",
+       "       'Últ balanço processado', 'Valor da firma', 'Nro. Ações', 'Dia', 'P/L',\n",
+       "       'LPA', 'Mês', 'P/VP', 'VPA', '30 dias', 'P/EBIT', 'Marg. Bruta',\n",
+       "       '12 meses', 'PSR', 'Marg. EBIT', '2022', 'P/Ativos', 'Marg. Líquida',\n",
+       "       '2021', 'P/Cap. Giro', 'EBIT / Ativo', '2020', 'P/Ativ Circ Liq',\n",
+       "       'ROIC', '2019', 'Div. Yield', 'ROE', '2018', 'EV / EBITDA',\n",
+       "       'Liquidez Corr', '2017', 'EV / EBIT', 'Div Br/ Patrim', '',\n",
+       "       'Cres. Rec (5a)', 'Giro Ativos', 'Ativo', 'Dív. Bruta',\n",
+       "       'Disponibilidades', 'Dív. Líquida', 'Ativo Circulante', 'Patrim. Líq',\n",
+       "       'Receita Líquida', 'EBIT', 'Lucro Líquido', 'Depósitos',\n",
+       "       'Cart. de Crédito', 'Result Int Financ', 'Rec Serviços', '2016'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 250 entries, 0 to 249\n",
+      "Data columns (total 61 columns):\n",
+      " #   Column                  Non-Null Count  Dtype \n",
+      "---  ------                  --------------  ----- \n",
+      " 0   Papel                   250 non-null    object\n",
+      " 1   Cotação                 250 non-null    object\n",
+      " 2   Tipo                    250 non-null    object\n",
+      " 3   Data últ cot            250 non-null    object\n",
+      " 4   Empresa                 250 non-null    object\n",
+      " 5   Min 52 sem              250 non-null    object\n",
+      " 6   Setor                   250 non-null    object\n",
+      " 7   Max 52 sem              250 non-null    object\n",
+      " 8   Subsetor                250 non-null    object\n",
+      " 9   Vol $ méd (2m)          250 non-null    object\n",
+      " 10  Valor de mercado        250 non-null    object\n",
+      " 11  Últ balanço processado  250 non-null    object\n",
+      " 12  Valor da firma          250 non-null    object\n",
+      " 13  Nro. Ações              250 non-null    object\n",
+      " 14  Dia                     250 non-null    object\n",
+      " 15  P/L                     250 non-null    object\n",
+      " 16  LPA                     250 non-null    object\n",
+      " 17  Mês                     250 non-null    object\n",
+      " 18  P/VP                    250 non-null    object\n",
+      " 19  VPA                     250 non-null    object\n",
+      " 20  30 dias                 250 non-null    object\n",
+      " 21  P/EBIT                  250 non-null    object\n",
+      " 22  Marg. Bruta             250 non-null    object\n",
+      " 23  12 meses                250 non-null    object\n",
+      " 24  PSR                     250 non-null    object\n",
+      " 25  Marg. EBIT              250 non-null    object\n",
+      " 26  2022                    249 non-null    object\n",
+      " 27  P/Ativos                250 non-null    object\n",
+      " 28  Marg. Líquida           250 non-null    object\n",
+      " 29  2021                    250 non-null    object\n",
+      " 30  P/Cap. Giro             250 non-null    object\n",
+      " 31  EBIT / Ativo            250 non-null    object\n",
+      " 32  2020                    250 non-null    object\n",
+      " 33  P/Ativ Circ Liq         250 non-null    object\n",
+      " 34  ROIC                    250 non-null    object\n",
+      " 35  2019                    250 non-null    object\n",
+      " 36  Div. Yield              250 non-null    object\n",
+      " 37  ROE                     250 non-null    object\n",
+      " 38  2018                    250 non-null    object\n",
+      " 39  EV / EBITDA             250 non-null    object\n",
+      " 40  Liquidez Corr           250 non-null    object\n",
+      " 41  2017                    250 non-null    object\n",
+      " 42  EV / EBIT               250 non-null    object\n",
+      " 43  Div Br/ Patrim          250 non-null    object\n",
+      " 44                          250 non-null    object\n",
+      " 45  Cres. Rec (5a)          250 non-null    object\n",
+      " 46  Giro Ativos             250 non-null    object\n",
+      " 47  Ativo                   250 non-null    object\n",
+      " 48  Dív. Bruta              220 non-null    object\n",
+      " 49  Disponibilidades        220 non-null    object\n",
+      " 50  Dív. Líquida            220 non-null    object\n",
+      " 51  Ativo Circulante        220 non-null    object\n",
+      " 52  Patrim. Líq             250 non-null    object\n",
+      " 53  Receita Líquida         220 non-null    object\n",
+      " 54  EBIT                    220 non-null    object\n",
+      " 55  Lucro Líquido           250 non-null    object\n",
+      " 56  Depósitos               30 non-null     object\n",
+      " 57  Cart. de Crédito        30 non-null     object\n",
+      " 58  Result Int Financ       30 non-null     object\n",
+      " 59  Rec Serviços            30 non-null     object\n",
+      " 60  2016                    1 non-null      object\n",
+      "dtypes: object(61)\n",
+      "memory usage: 119.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Muda o dtype para int e float para que possamos trabalhar com essas colunas, é preciso fazer o mesmo para as demais colunas\n",
+    "df['Lucro Líquido'] = df['Lucro Líquido'].str.replace('\\.','',regex=True).astype('int64')\n",
+    "df['Cotação']       = df['Cotação'].str.replace(',','.',regex=True).astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 250 entries, 0 to 249\n",
+      "Data columns (total 61 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Papel                   250 non-null    object \n",
+      " 1   Cotação                 250 non-null    float64\n",
+      " 2   Tipo                    250 non-null    object \n",
+      " 3   Data últ cot            250 non-null    object \n",
+      " 4   Empresa                 250 non-null    object \n",
+      " 5   Min 52 sem              250 non-null    object \n",
+      " 6   Setor                   250 non-null    object \n",
+      " 7   Max 52 sem              250 non-null    object \n",
+      " 8   Subsetor                250 non-null    object \n",
+      " 9   Vol $ méd (2m)          250 non-null    object \n",
+      " 10  Valor de mercado        250 non-null    object \n",
+      " 11  Últ balanço processado  250 non-null    object \n",
+      " 12  Valor da firma          250 non-null    object \n",
+      " 13  Nro. Ações              250 non-null    object \n",
+      " 14  Dia                     250 non-null    object \n",
+      " 15  P/L                     250 non-null    object \n",
+      " 16  LPA                     250 non-null    object \n",
+      " 17  Mês                     250 non-null    object \n",
+      " 18  P/VP                    250 non-null    object \n",
+      " 19  VPA                     250 non-null    object \n",
+      " 20  30 dias                 250 non-null    object \n",
+      " 21  P/EBIT                  250 non-null    object \n",
+      " 22  Marg. Bruta             250 non-null    object \n",
+      " 23  12 meses                250 non-null    object \n",
+      " 24  PSR                     250 non-null    object \n",
+      " 25  Marg. EBIT              250 non-null    object \n",
+      " 26  2022                    249 non-null    object \n",
+      " 27  P/Ativos                250 non-null    object \n",
+      " 28  Marg. Líquida           250 non-null    object \n",
+      " 29  2021                    250 non-null    object \n",
+      " 30  P/Cap. Giro             250 non-null    object \n",
+      " 31  EBIT / Ativo            250 non-null    object \n",
+      " 32  2020                    250 non-null    object \n",
+      " 33  P/Ativ Circ Liq         250 non-null    object \n",
+      " 34  ROIC                    250 non-null    object \n",
+      " 35  2019                    250 non-null    object \n",
+      " 36  Div. Yield              250 non-null    object \n",
+      " 37  ROE                     250 non-null    object \n",
+      " 38  2018                    250 non-null    object \n",
+      " 39  EV / EBITDA             250 non-null    object \n",
+      " 40  Liquidez Corr           250 non-null    object \n",
+      " 41  2017                    250 non-null    object \n",
+      " 42  EV / EBIT               250 non-null    object \n",
+      " 43  Div Br/ Patrim          250 non-null    object \n",
+      " 44                          250 non-null    object \n",
+      " 45  Cres. Rec (5a)          250 non-null    object \n",
+      " 46  Giro Ativos             250 non-null    object \n",
+      " 47  Ativo                   250 non-null    object \n",
+      " 48  Dív. Bruta              220 non-null    object \n",
+      " 49  Disponibilidades        220 non-null    object \n",
+      " 50  Dív. Líquida            220 non-null    object \n",
+      " 51  Ativo Circulante        220 non-null    object \n",
+      " 52  Patrim. Líq             250 non-null    object \n",
+      " 53  Receita Líquida         220 non-null    object \n",
+      " 54  EBIT                    220 non-null    object \n",
+      " 55  Lucro Líquido           250 non-null    int64  \n",
+      " 56  Depósitos               30 non-null     object \n",
+      " 57  Cart. de Crédito        30 non-null     object \n",
+      " 58  Result Int Financ       30 non-null     object \n",
+      " 59  Rec Serviços            30 non-null     object \n",
+      " 60  2016                    1 non-null      object \n",
+      "dtypes: float64(1), int64(1), object(59)\n",
+      "memory usage: 119.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ON NM     84\n",
+       "ON        72\n",
+       "PN        49\n",
+       "PN N1     12\n",
+       "PNA        8\n",
+       "UNT N2     8\n",
+       "PN N2      5\n",
+       "UNT        3\n",
+       "DR3        2\n",
+       "PNAS       2\n",
+       "PNB        2\n",
+       "ON N1      1\n",
+       "PNA N1     1\n",
+       "ON N2      1\n",
+       "Name: Tipo, dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verifica tipos de ações que existem na bolsa e conta as ocorrências delas nos dados\n",
+    "df.Tipo.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/deborabastos/Documents/3.DataScience/py_web_scraping/webscraping.ipynb Cell 20'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/deborabastos/Documents/3.DataScience/py_web_scraping/webscraping.ipynb#ch0000021?line=2'>3</a>\u001b[0m fig\u001b[39m.\u001b[39mupdate_xaxes(title_text\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTipo\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/deborabastos/Documents/3.DataScience/py_web_scraping/webscraping.ipynb#ch0000021?line=3'>4</a>\u001b[0m fig\u001b[39m.\u001b[39mupdate_yaxes(title_text\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mQuantidade\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/deborabastos/Documents/3.DataScience/py_web_scraping/webscraping.ipynb#ch0000021?line=4'>5</a>\u001b[0m fig\u001b[39m.\u001b[39;49mshow()\n",
+      "File \u001b[0;32m~/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py:3398\u001b[0m, in \u001b[0;36mBaseFigure.show\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py?line=3364'>3365</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py?line=3365'>3366</a>\u001b[0m \u001b[39mShow a figure using either the default renderer(s) or the renderer(s)\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py?line=3366'>3367</a>\u001b[0m \u001b[39mspecified by the renderer argument\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py?line=3393'>3394</a>\u001b[0m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py?line=3394'>3395</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py?line=3395'>3396</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpio\u001b[39;00m\n\u001b[0;32m-> <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/basedatatypes.py?line=3397'>3398</a>\u001b[0m \u001b[39mreturn\u001b[39;00m pio\u001b[39m.\u001b[39;49mshow(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py:397\u001b[0m, in \u001b[0;36mshow\u001b[0;34m(fig, renderer, validate, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=391'>392</a>\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=392'>393</a>\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=393'>394</a>\u001b[0m         )\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=395'>396</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m nbformat \u001b[39mor\u001b[39;00m LooseVersion(nbformat\u001b[39m.\u001b[39m__version__) \u001b[39m<\u001b[39m LooseVersion(\u001b[39m\"\u001b[39m\u001b[39m4.2.0\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m--> <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=396'>397</a>\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=397'>398</a>\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=398'>399</a>\u001b[0m         )\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=400'>401</a>\u001b[0m     ipython_display\u001b[39m.\u001b[39mdisplay(bundle, raw\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    <a href='file:///Users/deborabastos/Documents/3.DataScience/py_web_scraping/venv/lib/python3.10/site-packages/plotly/io/_renderers.py?line=402'>403</a>\u001b[0m \u001b[39m# external renderers\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
+     ]
+    }
+   ],
+   "source": [
+    "# Gráfico dos tipos de ações e suas frequências\n",
+    "fig = px.bar(df.Tipo.value_counts(), title=\"Tipo de ação\")\n",
+    "fig.update_xaxes(title_text='Tipo')\n",
+    "fig.update_yaxes(title_text='Quantidade')\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
