--- a/webscraping.ipynb
+++ b/webscraping.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_acoes"
+    "data_acoes"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.info()"
+    "df.info()"
    ]
   },
   {
