--- a/webscraping.ipynb
+++ b/webscraping.ipynb
@@ -1,15 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup as BS\n",
-    "import pandas as pd\n",
-    "import requests\n",
-    "import re"
+    "## Web Scraping"
    ]
   },
   {
@@ -18,12 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###############################˜#################################\n",
-    "########################## WEBSCRAPING #########################\n",
-    "################################################################\n",
-    "\n",
-    "# page = requests.get('https://www.fundamentus.com.br/ultimos-resultados.php')\n",
-    "# print(page.status_code)\n",
+    "from bs4 import BeautifulSoup as BS # Retrieve data out of HTML and XML files in a tree format \n",
+    "import pandas as pd # Data analysis and manipulation\n",
+    "import requests # Requests data from webpage using http protocol\n",
+    "import re # Regular expressions lib "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page = requests.get('https://www.fundamentus.com.br/ultimos-resultados.php')\n",
+    "print(page.status_code)\n",
     "\n",
     "# Se der 403, verificar autorizações que estão no cabeçado de solicitação. Como:\n",
     "# Inpecionar -> Network -> refresh page -> últimos resultados -> header\n",
@@ -174,14 +177,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "################################################################\n",
-    "######################## ANÁLISE DOS DADOS ######################\n",
-    "################################################################"
+    "## Data Analysis"
    ]
   },
   {
